Walk the container chain to correctly find nested inline sticky ancestors.

BUG=704814

Review-Url: https://codereview.chromium.org/2776643002
Cr-Commit-Position: refs/heads/master@{#459842}

Former-commit-id: a1f2ac48e3dc57547c562f759c6adcc1293177ff